[package]
name = "bevy_glium"
version = "0.1.0"
authors = ["James <jamescarterbell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.1.3"
glium = {git  = "https://github.com/jamescarterbell/glium.git"}
glutin = {git  = "https://github.com/jamescarterbell/glutin.git"}
bevy_transform = "0.1.3"
bevy_glutin = {git  = "https://github.com/jamescarterbell/bevy_glutin.git"}
bevy_window = "0.1.3"
bevy_input = "0.1.3"
bevy_core = "0.1.3"
bevy_type_registry = "0.1.3"
bevy_utils = {git  = "https://github.com/jamescarterbell/bevy_utils.git"}